k8s/globosmtp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globosmtp
spec:
  selector:
    matchLabels:
      app: globosmtp
  replicas: 1
  template:
    metadata:
      labels:
        app: globosmtp
    spec:      
      containers:
      - name: stmp4dev
        image: rnwood/smtp4dev:latest  
        ports:
        - containerPort: 80
        - containerPort: 25
        - containerPort: 143  
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"  

---
apiVersion: v1
kind: Service
metadata:
  name: globomail-service
spec:
  selector:
    app: globosmtp
  type: ClusterIP   
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 80      
  
---
apiVersion: v1
kind: Service
metadata:
  name: globosmtp-service
spec:
  clusterIP: None # headless service
  selector:
    app: globosmtp
  ports:
    - protocol: TCP
      port: 25
      targetPort: 25
